--- a/MoneyTracker/MoneyTracker/src/main/resources/application.properties
+++ b/MoneyTracker/MoneyTracker/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#MySQL database configuration
+#Setting url of our database
+spring.datasource.url=jdbc:mysql://localhost:3306/moneytracker
+spring.datasource.username=root
+spring.datasource.password=Mysql@1Shardul
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
